<resources>
    <string name="app_name">Qui-Bot 2D</string>

    <!-- Menu -->
    <string name="menu_home">Inici</string>
    <string name="menu_experiments">Experiments</string>
    <string name="menu_interact">Interactua amb el robot</string>
    <string name="menu_tic_tac_toe">Tres en ratlla</string>
    <string name="menu_connect4">Connecta 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <!-- Login and Register layout -->
    <string name="txtEmail">Correu electrònic</string>
    <string name="txtPassword">Contrassenya</string>
    <string name="txtRepeatPassword">Repeteix la contrassenya</string>
    <string name="txtLogin">Entrar</string>
    <string name="txtCreateNewAccount">Crear un nou compte?</string>
    <string name="txtCreateAccount">Crear compte</string>
    <string name="txtAlreadyHaveAnAccount">Ja tens un compte?</string>

    <!-- Login -->
    <string name="txtEnterCorrectEmail">Entra un correu vàlid.</string>
    <string name="txtPasswordLength">La contrassenya ha de contenir 6 caràcters o més.</string>
    <string name="txtWaitLogin">Espera mentre s\'inicia sessió.</string>
    <string name="txtLoggingIn">Iniciant sessió</string>
    <string name="txtErrorLoggingIn">Error iniciant sessió.</string>

    <!-- Register -->
    <string name="registering">Registrant</string>
    <string name="newUserRegistered">Nou usuari registrat correctament</string>
    <string name="txtErrorRegistering">Error en realitzar el registre</string>

</resources>