<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/homeAdmin">

    <fragment
        android:id="@+id/homeAdmin"
        android:name="com.example.tfgquibotapp.ui.homeAdmin.HomeAdmin"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin" />
    <fragment
        android:id="@+id/interactWithRobot"
        android:name="com.example.tfgquibotapp.ui.interactWithRobot.InteractWithRobot"
        android:label="@string/menu_interact"
        tools:layout="@layout/fragment_interact_with_robot" />
    <fragment
        android:id="@+id/experiments"
        android:name="com.example.tfgquibotapp.ui.experiments.Experiments"
        android:label="@string/menu_experiments"
        tools:layout="@layout/fragment_experiments" />
    <fragment
        android:id="@+id/usersList"
        android:name="com.example.tfgquibotapp.ui.usersList.UsersList"
        android:label="@string/menu_users_list"
        tools:layout="@layout/fragment_users_list" />
</navigation>